<resources>
    <string name="app_name">Willowood\nCrop Protection</string>
    <string name="aboutus_txt"> Willowood is a Global Crop Protection Company with its business in more than 50 countries. Willowood was established in 1992 in Hong Kong &amp; started India operations in 2006 and since then has been one of the fastest growing company in the industry. Willowood has 3 manufacturing facilities &amp; a state-of-the-art R&amp;D Centre and GLP facility near Vadodara in Gujarat.\n</string>
    <string name="secondaboutus"> Willowood is an ISO 9001, ISO 14001, OHSAS 18001 and NABL accredited company in India.\n</string>
    <string name="thirdaboutus"> Willowood is winner of top 100 SMEs in 2015 and 2016 awarded by Dun and Bradstreet and India SME forum respectively, also acknowledged as best emerging company by ET Now. Willowood is also honored with India’s Small Giant Award in International SME Convention-2018.Willowood was bestowed with “Best Company from an Emerging Region” at Agrow Awards (2018) in London, UK.\n</string>
    <string name="hindiaboutus">विलोवुड एक विश्वस्तरीय  फसल संरक्षण कंपनी है, जो 50 से अधिक देशों में व्यवसाय करती है। विलोवुड की स्थापना बर्ष 1992 में होंगकांग में हुई. भारत में विलोवुड ने अपना व्यवसाय बर्ष 2006 में शुरू किया. भारत में, फसल सुरक्षा रसायन के निर्माण के लिए विलोवुड की 3 इकाइयां तथा एक आधुनिक अनुसंधान केन्द्र एवं जी.एल.पी. प्रयोगशाला बड़ोदा गुजरात के बड़ोदा में स्थित हैं.  </string>
    <string name="app_description">Willowood Crop Protection App is an initiative by Willowood Crop Sciences Pvt. Ltd to provide best crop protection solution to farmer community. Willowood Crop Protection has been specifically set to provide maximum support to the farmer community by providing the following features: • Language: Willowood Crop Protection provides information in two languages ie. English and Hindi which were developed keeping in view the mother tongue of the majority of the Indian farmers.This multilingual support conveys the best of the information to the farmer. • Crops: Willowood Crop Protection App provides the information of crop protection in major 22 crops. The details in each crop covers up various information like the pests, diseases and weeds that cause economic yield loss to the crops. The App also provides proper solution through Willowood Products.This feature has been enabled offline and can be accessed without an internet connection. • Safety Precautions: Willowood Crop Protection App has taken in consideration the safety precautions that any farmer needs to take care while dealing with Agro Chemicals.The App has dedicated two of its sections in detailing about Safety Measures as well as the Required Antidotes if in case of an mishap. These both features have also been enabled offline for the user to have a look even without an Internet connection. • Products: Willowood Crop Protection App has listed the details about the products by Willowood Crop Sciences Pvt Ltd. These products are divided in broad Categories of Insecticides, Miticides, Fungicides, Herbicides, PGRs and Surfactants.The app covers detailed information about each product.The information includes chemical composition,mode of action,features/advantage/benefits,Recommendation on different pests and Doses of use. This feature is available offline for use. • Willowood Advisors: For the maximum support to the farmers Willowood Crop Protection has given the state wise list of Willowood Advisors along with their phone numbers.Farmers can speak to the Advisors in their local languages.This feature is also offline and is available after Registration only. • Notification: Willowood Crop Protection App provides information about latest updates of the company as well as news related to agriculture for the benefit of farmers. • Weather: Weather plays an important role in deducing the output of agriculture. So Willowood Crop Protection App has provided a separate section that shows up the weather of your location through third party websites. The weather information includes Temperature, Rainfall, Humidity, Windspeed etc. • Contact: Willowood Crop Protection App has provided all the social media links like Facebook, Twitter, LinkedIn, Youtube along with Website, Email Id and Customer Care number inside the app to resolve their queries.</string>
    <string name="krishi_rasayanon">कृषि रसायनों के लिए विषहर औषध:</string>
    <string name="_1_75_sp_n2_35_15_n3_50_5_n4_76_ec_n_n_2_4_5_10_n">1. एसिफेट 75% SP\n2. एसिफेट 35 % + बुप्रोफेंजिन 15% \n3. क्लोरोपायरिफोस 50% + साइपरमेथ्रिन 5%\n4. डाइक्लोरोवास 76% EC\n \nउपरोक्त कृषि रसायनों के लिए एट्रोपिन सल्फेट 2-4 मिली ग्राम हर 5 से 10 मिनट के अन्तराल पर एक साथ लगातार देते रहना चाहिए.\nअन्य किसी प्रकार के कृषि रसायनों के लिए कोई विशेष प्रतिरोधी दवा (विषहर औषध) उपलब्ध नहीं है इन के लिए मरीज की स्थिति को देखते हुए इलाज करना चाहिए.</string>
    <string name="anya_samanya">अन्य सामान्य प्रतिरोधी दवायें व उपाय -</string>
    <string name="_1_n2_n3_n4_n5_n6_n7_5_n8_n9_n"><![CDATA[1. मरीज़ को हलके कम्बल से ढक दें. \n2. गरम पानी या बोटल का प्रयोग बिलकुल ना करे.\n3. पलंग को पैरों की तरफ से ऊंचा कर दे .\n4. हाथ-पैरों में रबर लगा कर खून के दबाव को कम करे . \n5. मरीज़ को कड़क चाय और काफ़ी दे .\n6. मरीज़ को शक्ति वर्धक इंजेक्शन जेसे केफिन या एपिनेफेरिन दे .\n7. मरीज़ को ग्लूकोज 5% की बोतल लगान चाहिए  \n8. जरुरत पड़ने पर मरीज को खून या प्लाज्मा दे \n9. मरीज़ को बहुत शारीरिक श्रम नहीं करवाना चहिये न ही एक साथ बहुत सारे इलाज करने चाहिए \n]]></string>
    <string name="behoshi"><![CDATA[बेहोशी रोकने के लिए प्राथमिक उपचार : ]]></string>
    <string name="_1_n2_n">1. पलकों लो खुल्ला रखने की कोशिश करे .\n2. सावधानी पूर्वक आँखों को साफ़ पानी से बार बार धोये, देर करने से समस्या ज्यादा हो सकती है \n</string>
    <string name="yadi_zeher">जहर यदि आँखों के संपर्क में आ गया हो तो प्राथमिक उपचार :</string>
    <string name="_1_n2_n3_n4_n5_n6_n7_n">1.मरीज़ को तुरंत खुली हवा में लेटा दे और मरीज़ को चलाने की कोशिश न करे \n2. मरीज़ के कपडे खोल दे या ढीले कर दे \n3. कृतिम स्वास देने की कोशिश करे अगर मरीज़ ठीक से साँस न ले पा रहा हो या रुक गयी हो ज्यादा जोर न लगाये न ही दिल में या छाती पर किसी प्रकार का दवाब दे \n4. मरीज़ को ठंडा रखने की कोशिश करे \n5. मरीज़ को चादर से लपेट के रखे, ज्यादा हिलाए डूलायें नहीं जितना हो मरीज़ को शांत रखने क कोशिश करे ,\n6. यदि मरीज असहज महसूस कर रहा हो तो उसे अँधेरे कमरे में रखे \n7. किसी भी रूप में अल्कोहल न दे \n</string>
    <string name="saans">साँस के द्वारा यदि जहर गया हो तो प्राथमिक उपचार :</string>
    <string name="_15_4_5_n_n">जहर निगल लेने की स्थिति में मरीज़ के पेट से जहर को तुरंत निकलने के लिए उलटी कारने की कोशिश करनी चाहिए| 15 ग्राम नमक एल गिलास गरम पानी में दे और इसे देते रहे जब तक मरीज़ को उलटी ना हो जाये उंगली या चम्मच के पीछे के हिस्से से गले को सावधानी पूर्वक सहलाते रहे जब तक की 4 से 5 बार पेट पूरा खली न हो जाये \n \n यदि मरीज़ ने उलटी कर ली हो तो ज्यादा से ज्यादा गरम पानी पिलाये और दिए गये निर्देशों का पालन करे .</string>
    <string name="zeher">जहर निगलने पर प्राथमिक उपचार :</string>
    <string name="prathmik">प्राथमिक उपचार और सावधानियां -</string>
    <string name="n1_n2_9_18_570_n3_n4_n5_n6_n7_n">शांतिदायक पदार्थ (राहत देने वाले पदार्थ) : जहर को पेट से पूरा निकलने के बाद निम्न में से कोई भी एक चीज़ दे \n1. कच्चे अंडे की सफेदी को पानी के साथ.\n2. जिलेटिन 9 से 18 ग्राम 570 मिली गरम पानी में घोल कर \n3. माखन\n4. क्रीम\n5. दूध \n6. आलू मसल के \n7. अटा और पानी \n</string>
    <string name="gastric_hin"><![CDATA[गैस्ट्रिक लावेज़ (पेट साफ़ करना) : पेट साफ़ करना पेट से जहर निकलने का सबसे कारगर तरीका है .]]></string>
    <string name="n_7_3_5_3_5"><![CDATA[जहर को निकलना : जहर को निकलने के लिए मरीज़ को उलटी कराने की कोशिश करनी चाहिए \n अन्य सामान्य प्रतिरोधी दवायें:  7 ग्राम चारकोल को बारीक़ पीस कर 3.5 ग्राम मेगनीसियम ऑक्साइड और 3.5 ग्राम टेनिक एसिड के साथ आधे गिलास गरम पानी में देने से दवा का असर थोडा कम होता है | यह मिक्चर एसिड्स, तरल ग्लाइकोसाइड और भारी तत्वों के जहर निवारक में उपयोगी है|यह उपाय गैसट्रिक लावेज़ के बाद करना चाहिए.]]></string>
    <string name="soil_application_through_broadcasting_method">Soil application through broadcasting method</string>
    <string name="brand_gr_is_recommended_by_saus_icar_institutions">• BRAND GR is recommended by SAUs/ ICAR institutions.</string>
    <string name="an_early_application_of_brand_gr_will_give_better_results">An early application of Brand GR will give better results.</string>
    <string name="_0_45_days_after_sowing_transplanting">0–45 days after sowing / transplanting.</string>
    <string name="brand_gr_is_a_natural_bio_stimulant_that_stimulates_the_bio_chemical_physiological_activities_for_overall_growth_of_the_plant">• BRAND GR is a Natural Bio-Stimulant that stimulates the bio-chemical / physiological activities for overall growth of the plant.</string>
    <string name="brand_gr_is_a_soil_conditioner_and_strengthens_soil_root_bonding">• BRAND GR is a soil conditioner and strengthens soil - root bonding.</string>
    <string name="brand_gr_improves_water_holding_capacity_of_the_soil">• BRAND GR improves water holding capacity of the soil.</string>
    <string name="brand_gr_helps_maintaining_soil_ph_6_5_7_0_and_facilitates_absorption_of_nutrients">• BRAND GR helps maintaining soil pH (6.5 -7.0) and facilitates absorption of nutrients.</string>
    <string name="brand_gr_improves_seed_germination_via_the_improved_cataion_exchange_capacity_cec_level_of_soil">• BRAND GR improves seed germination via the improved Cataion Exchange Capacity (CEC) level of soil.</string>
    <string name="brand_gr_enhances_uptake_of_nutrients_more_efficiently_by_increased_permeability_of_plant_membranes">• BRAND GR enhances uptake of nutrients more efficiently by increased permeability of plant membranes.</string>
    <string name="brand_gr_helps_in_development_of_lateral_buds_to_promote_branches">• BRAND GR helps in development of lateral buds to promote branches.</string>
    <string name="_4_8_kg_acre">4–8 Kg/ acre</string>
    <string name="brand_gr_enhances_crop_yield">• BRAND GR enhances Crop Yield</string>
    <string name="brand_gr_ensures_quality_and_marketable_yield">• BRAND GR ensures Quality and Marketable Yield</string>
    <string name="brand_gr_helps_in_chlorophyll_synthesis_to_promote_greenness_in_plants">• BRAND GR helps in Chlorophyll synthesis to promote greenness in plants.</string>
    <string name="brand_gr_promotes_robust_tillering_in_cereal_crops_for_higher_yield">• BRAND GR promotes robust tillering in cereal crops for higher yield.</string>
    <string name="brand_gr_stimulates_root_development">• BRAND GR stimulates root development.</string>
    <string name="brand_gr_increases_fertilizer_efficacy_by_restricting_leaching">• BRAND GR increases fertilizer efficacy by restricting leaching.</string>
    <string name="active_ingredient">Active Ingredient:</string>
    <string name="campesterol_amp_stigmasterol"><![CDATA[Campesterol & Stigmasterol]]></string>
    <string name="mode_of_action">Mode of Action :</string>
    <string name="brand_sl_regulates_the_development_of_flowers_and_maintain_male_female_flowers_ratio">• BRAND SL regulates the development of flowers and maintain male / female flowers ratio.</string>
    <string name="time_of_application">Time of Application:</string>
    <string name="dose">Dose:</string>
    <string name="features_advantage_benefits">Features/ Advantage/ Benefits:</string>
    <string name="hexythiazox_5_45_ec_n_n_brand_name_wiltox_n_n_wiltox_is_a_miticide_that_controls_mites_in_tea_chilli_amp_apple_n_n_dose_for_use_n_tea_140_200_ml_acre_n_n_chilli_140_200_ml_acre_n_n_apple_0_4_ml_lt_of_water_n_n_please_read_dfu_attached_with_the_product_before_use_n"><![CDATA[• HEXYTHIAZOX 5.45% EC\n \n• BRAND NAME: WILTOX\n \n• WILTOX is a miticide that controls mites in tea, chilli & apple.\n \n• Dose for use-\n Tea: 140-200 ml / acre \n \n Chilli: 140-200 ml / acre\n \n Apple: 0.4 ml / lt of water\n \n• Please read DFU attached with the product before use.\n]]></string>
</resources>