<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backtest"
    tools:context="com.willowood.akshatrastogi.willowoodagri.wiltoxenglish">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ln"
            android:contentDescription="@string/app_description"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:background="#038c11"
                    android:src="@drawable/wiltoxback"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/hexythiazox_5_45_ec_n_n_brand_name_wiltox_n_n_wiltox_is_a_miticide_that_controls_mites_in_tea_chilli_amp_apple_n_n_dose_for_use_n_tea_140_200_ml_acre_n_n_chilli_140_200_ml_acre_n_n_apple_0_4_ml_lt_of_water_n_n_please_read_dfu_attached_with_the_product_before_use_n"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="false"
                    android:textSize="22sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>